# ComfyUI-DepthAnythingV2

./: README.md  nodes.py  pyproject.toml  requirements.txt
depth_anything_v2/: dinov2.py  dpt.py
depth_anything_v2/dinov2_layers/: attention.py  patch_embed.py
depth_anything_v2/util/: blocks.py
